apps/staging/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
spec:
  ingressClassName: traefik
  rules:
    - host: books.lab.claudebelanger.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 3005
  tls:
    - hosts:
        - books.lab.claudebelanger.dev
